--- a/styles/style.css
+++ b/styles/style.css
@@ -6,10 +6,10 @@ body{
 }
 h1{
   color: #000;
-  font:bold 1.5em Arial, sans-serif;
-  line-height: 2.125em;
+  font: 1.5em Arial, sans-serif;
+  line-height: 2em;
   text-align: center;
-  margin-top: 50px;
+
 }
 img {
 	max-width: 100%;
@@ -31,7 +31,7 @@ hr{
 .logob{
   display: block;
   width: 80px;
-  margin: 20px auto;
+  margin: 60px auto 10px auto;
 }
 .ball1{
   width: 500px;
@@ -66,6 +66,10 @@ hr{
   position: relative;
   top: 0px;
 }
+.midtitle{
+  text-align: center;
+  margin-top: 50px;
+}
 .content{
   margin: 66px auto;
   width: 72.9166667%;
@@ -94,7 +98,7 @@ hr{
 }
 .illustration {
 	display: block; 
-	width: 85%; 
+	width: 70%; 
 	height: auto; 
 	margin: 20px auto; 
 }
@@ -143,10 +147,15 @@ a.subscribe:focus {
   background-color: #F7F7F7;
   padding: 60px 20%;
 }
-.testrow{
+.testrow1{
   margin: 10 auto;
   width: 100%;
   height: 150px;
+}
+.testrow2{
+  margin: 10 auto;
+  width: 100%;
+  height: 200px;
 }
 .test1{
   float: left;
@@ -165,6 +174,9 @@ a.subscribe:focus {
 .credit{
   text-align: right;
   color: #2BB6C9;
+}
+.qatitle{
+  font: 2em Arial, sans-serif;
 }
 .qaunit{
   width: 90%;
@@ -246,8 +258,11 @@ a.subscribe:focus {
   .testimonial{
     padding: 30px 5%;
   }
-  .testrow{
+  .testrow1{
     height: 230px;
+  }
+  .testrow2{
+    height: 400px;
   }
   .test1{
     float: none;
@@ -280,8 +295,14 @@ a.subscribe:focus {
   .question{
     margin-left: -20px;
   }
+  .qatitle{
+  font: 1.5em Arial, sans-serif;
+}
 }
 @media screen (min-width: 601px) and (max-width: 1200px){
+  .testimonial{
+    padding: 60px 10%;
+  }
   .header{
     height: 300px;
   }
