--- a/styles/style.css
+++ b/styles/style.css
@@ -28,6 +28,28 @@ hr{
   margin-left: 30px;
   float: left;
 }
+.facebook{
+  width: 35px;
+  height: 35px;
+  position: absolute;
+  top:20px;
+  right: 20px;
+}
+#share_btn{
+  width: 100%;
+  height: 100%;
+  display: block;
+}
+#share_btn img{
+  height: 100%;
+  -webkit-transition: height 0.5s ease;
+  -moz-transition: height 0.5s ease;
+  -o-transition: height 0.5s ease;
+  transition: height 0.5s ease;
+}
+#share_btn:hover img{
+  height: 120%;
+}
 .logob{
   display: block;
   width: 80px;
