--- a/styles/style.css
+++ b/styles/style.css
@@ -9,7 +9,11 @@ h1{
   font: 1.5em Arial, sans-serif;
   line-height: 2em;
   text-align: center;
-
+}
+h3{
+  color: #000;
+  font: 1.2em Hoefler Text, Songti TC, serif;
+  line-height: 1.5em;
 }
 img {
 	max-width: 100%;
@@ -118,6 +122,41 @@ hr{
 .giftlink{
   color: #2bb6c9; 
   text-decoration: underline;
+}
+.giftlink:hover,
+.giftline:focus{
+  cursor: pointer;
+}
+.modal{
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0,0,0,0.4);
+}
+.modal-content{
+  background-color: #ffffff;
+  margin: 15% auto;
+  padding: 30px;
+  border: none;
+  width: 650px;
+}
+
+.close{
+  color: #aaa;
+  float: right;
+  font-size: 1.5em;
+  font-weight: bold;
+}
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
 }
 .illustration {
 	display: block; 
