--- a/styles/style.css
+++ b/styles/style.css
@@ -6,10 +6,10 @@ body{
 }
 h1{
   color: #000;
-  font:bold 1.5em Arial, sans-serif;
-  line-height: 2.125em;
+  font: 1.5em Arial, sans-serif;
+  line-height: 2em;
   text-align: center;
-  margin-top: 50px;
+
 }
 img {
 	max-width: 100%;
@@ -28,10 +28,32 @@ hr{
   margin-left: 30px;
   float: left;
 }
+.facebook{
+  width: 35px;
+  height: 35px;
+  position: absolute;
+  top:20px;
+  right: 20px;
+}
+#share_btn{
+  width: 100%;
+  height: 100%;
+  display: block;
+}
+#share_btn img{
+  height: 100%;
+  -webkit-transition: height 0.5s ease;
+  -moz-transition: height 0.5s ease;
+  -o-transition: height 0.5s ease;
+  transition: height 0.5s ease;
+}
+#share_btn:hover img{
+  height: 120%;
+}
 .logob{
   display: block;
   width: 80px;
-  margin: 20px auto;
+  margin: 60px auto 10px auto;
 }
 .ball1{
   width: 500px;
@@ -66,6 +88,10 @@ hr{
   position: relative;
   top: 0px;
 }
+.midtitle{
+  text-align: center;
+  margin-top: 50px;
+}
 .content{
   margin: 66px auto;
   width: 72.9166667%;
@@ -74,6 +100,7 @@ hr{
   margin: 0 auto 50px auto;
   text-align: center;
   line-height: 2em;
+  max-width: 800px;
 }
 
 .plansrow{
@@ -94,7 +121,7 @@ hr{
 }
 .illustration {
 	display: block; 
-	width: 85%; 
+	width: 70%; 
 	height: auto; 
 	margin: 20px auto; 
 }
@@ -143,10 +170,15 @@ a.subscribe:focus {
   background-color: #F7F7F7;
   padding: 60px 20%;
 }
-.testrow{
+.testrow1{
   margin: 10 auto;
   width: 100%;
   height: 150px;
+}
+.testrow2{
+  margin: 10 auto;
+  width: 100%;
+  height: 200px;
 }
 .test1{
   float: left;
@@ -165,6 +197,9 @@ a.subscribe:focus {
 .credit{
   text-align: right;
   color: #2BB6C9;
+}
+.qatitle{
+  font: 2em Arial, sans-serif;
 }
 .qaunit{
   width: 90%;
@@ -199,7 +234,7 @@ a.subscribe:focus {
 
 @media screen and (max-width: 620px){
   h1{
-    margin-bottom: 80px;
+    margin-bottom: 20px;
   }
   .header{
     height: 220px
@@ -246,8 +281,11 @@ a.subscribe:focus {
   .testimonial{
     padding: 30px 5%;
   }
-  .testrow{
+  .testrow1{
     height: 230px;
+  }
+  .testrow2{
+    height: 400px;
   }
   .test1{
     float: none;
@@ -280,8 +318,14 @@ a.subscribe:focus {
   .question{
     margin-left: -20px;
   }
+  .qatitle{
+  font: 1.5em Arial, sans-serif;
+}
 }
 @media screen (min-width: 601px) and (max-width: 1200px){
+  .testimonial{
+    padding: 60px 10%;
+  }
   .header{
     height: 300px;
   }
