--- a/styles/style.css
+++ b/styles/style.css
@@ -15,6 +15,19 @@ h3{
   font: 1.2em Hoefler Text, Songti TC, serif;
   line-height: 1.5em;
 }
+h4{
+  color: #000;
+  font-family: Helvetica Neue, Arial, PingFang TC, Hiragino Sans GB, Microsoft Yahei, sans-serif;
+  font-weight: bold;
+}
+.caption{
+  font-weight: 400;
+  font-family: Hoefler Text, Songti TC, serif;
+  font-size: 14px;
+  margin-top: 10px;
+  color: #838383;
+  line-height: 1.882
+}
 img {
 	max-width: 100%;
 }
