--- a/styles/style.css
+++ b/styles/style.css
@@ -308,6 +308,9 @@ a.subscribe:focus {
     margin: 30px auto;
     width: 90%;
   }
+  .modal-content{
+  width: 90%;
+  }
   .intro{
     font-size: .9em;
     line-height: 2em;
