--- a/styles/style.css
+++ b/styles/style.css
@@ -13,6 +13,11 @@ h1{
 
 =======
 }
+h2 {
+  font-size: 1.2em;
+  font-weight: 800;
+  color: #2bb6c9; 
+}
 h3{
   color: #000;
   font: 1.2em Hoefler Text, Songti TC, serif;
@@ -115,13 +120,14 @@ hr{
 }
 .content{
   margin: 66px auto;
-  width: 72.9166667%;
+  width: 60%;
 }
 .intro{
   margin: 0 auto 50px auto;
   text-align: center;
   line-height: 2em;
   max-width: 820px;
+  text-align: left;
 }
 
 .plansrow{
@@ -182,9 +188,26 @@ hr{
 	margin: 20px auto; 
 }
 .description{
-  list-style-type: disc;
   line-height: 2em;
-  height: 250px;
+  padding: 0;
+}
+.description {
+  list-style: none;
+}
+.description li:before {
+  content: "";
+  position: relative;
+  color: black;
+  text-align: center;
+  line-height: 30px;
+  margin-top: 9px;
+  width: 14px;
+  height: 14px;
+  border-radius: 30%;
+  display: inline-block;
+  margin-right: 15px;
+  border: 2px solid #2bb6c9;
+  top: 4px;
 }
 .row{
   margin: 10px auto 20px auto;
@@ -219,6 +242,12 @@ a.subscribe:focus {
   font: 1.2em;
   color: #9B9B9B;
   text-decoration: none;
+}
+
+.awards {
+  margin: 0px auto 0 auto;
+  background-color: #EFF1F1;
+  padding: 60px 20%;
 }
 
 .testimonial{
@@ -305,8 +334,10 @@ a.subscribe:focus {
     margin: 20px auto 80px auto;
   }
   .content{
-    margin: 30px auto;
-    width: 90%;
+    padding: 50px 40px;
+    width: 100%;
+    box-sizing: border-box;
+    margin: 0;
   }
   .modal-content{
   width: 90%;
@@ -338,21 +369,30 @@ a.subscribe:focus {
     height: auto;
   }
   .testimonial{
-    padding: 30px 5%;
+    padding: 30px 40px;
   }
   .testrow1{
-    height: 230px;
+    height: auto;
   }
   .testrow2{
-    height: 400px;
+    height: auto;
   }
   .test1{
     float: none;
-    width: 80%;
+    width: 100%;
+    margin: 0
   }
   .test2{
     float: none;
-    width: 80%;
+    width: 100%;
+    margin: 0;
+  }
+  .awards {
+    font-size: 0.9em;
+    line-height: 2;
+    width: 100%;
+    padding: 30px 40px;
+    box-sizing: border-box;
   }
   .ball1{
     width:220px;
@@ -370,12 +410,17 @@ a.subscribe:focus {
     font-size: .9em;
   }
   .question:before{
-    width: 20px;
+    width: 6%;
     height: 20px;
     left: -10px;
   }
   .question{
     margin-left: -20px;
+  }
+  .question p {
+    display: inline-block;
+    width: 94%;
+    margin-top: 0;
   }
   .qatitle{
   font: 1.5em Arial, sans-serif;
