--- a/styles/style.css
+++ b/styles/style.css
@@ -118,7 +118,7 @@ hr{
   background-size: cover;
 }
 .mask {
-  padding: 0 20%;
+  padding: 0 12%;
   width: 100%;
   height: 40vh;
   position: absolute;
@@ -155,7 +155,10 @@ hr{
 }
 .content{
   margin: 66px auto;
-  width: 60%;
+  width: 80%;
+  line-height: 2em;
+  max-width: 820px;
+  text-align: left;
 }
 .intro{
   margin: 0 auto 50px auto;
@@ -309,7 +312,7 @@ a.subscribe:focus {
 .awards {
   margin: 0px auto 0 auto;
   background-color: #EFF1F1;
-  padding: 60px 20%;
+  padding: 60px 10%;
 }
 
 .album {
